--- a/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/kumArasambhavam/sarva-prastutiH/02.md
@@ -500,8 +500,8 @@ title = "०२"
 
 प्रशमाद् अर्चिषाम् एतद्  
 अनुद्गीर्ण-सुरायुधम् ।  
-वृत्रस्य हन्तुः कुलिशं  
-कुण्ठिताश्रीव लक्ष्यते ॥ 2.20 ॥  
+वृत्रस्य हन्तुः **कुलिशं  
+कुण्ठित+अश्रीव लक्ष्यते** ॥ 2.20 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -517,18 +517,21 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-प्रशमादिति ॥ अर्चिषां तेजसां प्रशमान्निर्वाणादनुद्गीर्णसुरायुधम् । अनुदितचित्रप्रभमित्यर्थः । एतद्वृत्रस्य हन्तुरिन्द्रस्य कुलिशं वज्रम् । कुण्ठिता अश्रयो यस्य तत्कुण्ठिताश्रि कुण्ठितकोटीव लक्ष्यते दृश्यते ॥ 2.20 ॥
+प्रशमादिति ॥ अर्चिषां तेजसां प्रशमान् निर्वाणाद्  
+अनुद्गीर्णसुरायुधम् - अनुदित-चित्रप्रभम् इत्यर्थः । एतद्वृत्रस्य हन्तुरिन्द्रस्य कुलिशं वज्रम् । कुण्ठिता अश्रयो यस्य तत्कुण्ठिताश्रि कुण्ठित-कोटीव लक्ष्यते दृश्यते ॥ 2.20 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-किं चायमरिदुर्वार पाणौ पाशः प्रचेतसः ।  
-मन्त्रेण हतवीर्यस्य फणिनो दैन्यमाश्रितः ॥ 2.21 ॥  
+किं चायम् अरि-दुर्वारः  
+पाणौ **पाशः** प्रचेतसः ।  
+मन्त्रेण हत-वीर्यस्य  
+फणिनो **दैन्यम् आश्रितः** ॥ 2.21 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
-किं चायमरिदुर्वार पाणौ पाशः प्रचेतसः ।  
+किं चायमरिदुर्वारः पाणौ पाशः प्रचेतसः ।  
 मन्त्रेण हतवीर्यस्य फणिनो दैन्यमाश्रितः ॥ 2.21 ॥  
 </details>
 
@@ -544,8 +547,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-कुबेरस्य मनःशल्यं शंसतीव पराभवम् ।  
-अपविद्धगदो बाहुर्भग्नशाख इव द्रुमः ॥ 2.22 ॥  
+कुबेरस्य मनःशल्यं  
+**शंसतीव** पराभवम् ।  
+अपविद्ध+++(=त्यक्त)+++-गदो बाहुर्  
+भग्न-शाख इव द्रुमः ॥ 2.22 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -561,13 +566,15 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-कुबेरस्येति ॥ अपविद्धा त्यक्ता गदा येन सोऽपबिद्धगदः । अतएव भग्नशखो द्रुम इव स्थितः कुबेरस्य बाहुर्मनः शल्यम् । दुखहेतुत्वान्मनसः शल्यप्रायमित्यर्थः । पराभवम् । शत्रुकृतमिति शेषः । शंसतीव कथयतीव । लक्षणयानुमापयतीत्यर्थः । बाहौ मुख्म्कथनस्यासम्भवादिवशब्दोऽप्यत एव ॥ 2.22 ॥
+कुबेरस्येति ॥ अपविद्धा त्यक्ता गदा येन सो **ऽपविद्धगदः** । अत एव **भग्नशखो द्रुम इव** स्थितः कुबेरस्य बाहुर्मनः शल्यम् । दुखहेतुत्वान्मनसः शल्यप्रायमित्यर्थः । पराभवम् । शत्रुकृतमिति शेषः । शंसतीव कथयतीव । लक्षणयानुमापयतीत्यर्थः । बाहौ मुख्म्कथनस्यासम्भवाद् इव-शब्दोऽप्य् अत एव ॥ 2.22 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-यमोऽपि विलिखन्भूमिं दण्डेनास्तमितत्विषा ।  
-कुरुतेऽस्मिन्नमोघेऽपि निर्वाणालातलाघवम् ॥ 2.23 ॥  
+यमोऽपि **विलिखन्** भूमिं  
+दण्डेनास्तमित-त्विषा ।  
+**कुरुते** ऽस्मिन्न् अमोघे ऽपि  
+निर्वाणालात+++(=अङ्गार)+++-लाघवम् ॥ 2.23 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -583,19 +590,22 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-यम इति ॥ अस्तं नाशमिताः प्रात्पाः । अस्तमिति मकारान्तमव्ययम् । तस्य 'द्वीतीयाश्रितातीतपतितगतात्यस्तप्रात्पापन्नैः' इति समासः । अस्तमितास्त्विषो यस्य तेन निस्तेजस्केन दण्डेन यमोऽपि भूमिं विलिखन्नमोघेऽपि प्रागिति भावः । अस्मिन्दण्डे निर्वाणालातस्य शान्तोल्मुकस्य । अलातं नाम भूलेखनशलाका तस्य यल्लाघवं क्लैब्यं तत्कुरुते । 'अलातमुल्मुकं ज्ञेयम्' इति हलायुवः । निर्वाणोऽवाते' इति निपातनान्निष्ठानत्वम् । अत्रापि लाघवमिव लाघवमिति कल्पनान्निदर्शनालंकारः ॥ 2.23 ॥
+यम इति ॥ अस्तं नाशमिताः प्रात्पाः । अस्तमिति मकारान्तमव्ययम् । तस्य 'द्वीतीयाश्रितातीतपतितगतात्यस्तप्रात्पापन्नैः' इति समासः । अस्तमितास्त्विषो यस्य तेन निस्तेजस्केन दण्डेन यमोऽपि भूमिं विलिखन्नमोघेऽपि प्रागिति भावः । अस्मिन्दण्डे निर्वाणालातस्य शान्तोल्मुकस्य । **अलातं** नाम भूलेखन-शलाका तस्य यल्लाघवं क्लैब्यं तत्कुरुते । 'अलातमुल्मुकं ज्ञेयम्' इति हलायुवः । 'निर्वाणोऽवाते' इति निपातनान्निष्ठानत्वम् ।  
+अत्रापि लाघवमिव **लाघवम्** इति कल्पनान् निदर्शनालंकारः ॥ 2.23 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अमी च कथमादित्याः प्रतापक्षतिशीतलाः ।  
-चित्रन्यस्ता इव गताःप्रकाशमालोकनीयताम् ॥ 2.24 ॥  
+अमी च कथम् **आदित्याः**  
+प्रताप-क्षति-शीतलाः ।  
+चित्र-न्यस्ता इव **गताः** -  
+**प्रकामालोकनीयताम्** ॥ 2.24 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
 अमी च कथमादित्याः प्रतापक्षतिशीतलाः ।  
-चित्रन्यस्ता इव गताःप्रकाशमालोकनीयताम् ॥ 2.24 ॥  
+चित्रन्यस्ता इव गताः प्रकामालोकनीयताम् ॥ 2.24 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -610,8 +620,10 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-पर्याकुलत्वान्मरुतां वेगभङ्गोऽनुमीयते ।  
-अम्भसामोघसंरोधः प्रतीपगमनादिव ॥ 2.25 ॥  
+पर्याकुलत्वान् मरुतां  
+**वेगभङ्गो ऽनुमीयते** ।  
+अम्भसाम् ओघ-संरोधः  
+प्रतीप-गमनाद् इव ॥ 2.25 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -630,16 +642,20 @@ title = "०२"
 पर्याकुलेति ॥ मरुतां वायूनाम् । सप्तसप्तानामिति शेषः । पर्याकुलत्वात्स्खलितगतित्वाद्धेतोर्वेगस्य भङ्गोऽम्भसां जलानां प्रतीपगमनात् । उत्तानावरोहादित्यर्थः । ओघस्य संरोधः प्रवाहप्रतिबन्ध हवानुमीयते ॥ 2.25 ॥
 </details>
 
+<div class="audioEmbed" caption="वेदभूमिपाठः" src="https://archive.org/download/kuMArasambhava-mUlam-vedabhoomi.org/KumaraSambhava-Sarga02-26to45.mp3"></div>
+
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-आवर्जितजटामौलिविलम्बिशशिकोटयः ।  
-रुद्राणामपि मुर्धानः क्षत हुंकारशंसिनः ॥ 2.26 ॥  
+आवर्जित-जटा-मौलि-  
+विलम्बि-शशि-कोटयः ।  
+रुद्राणाम् अपि **मुर्धानः**  
+**क्षत-हुङ्कारशंसिनः** ॥ 2.26 ॥  
 </details>
 
 <details><summary>मूलम्</summary>
 
 आवर्जितजटामौलिविलम्बिशशिकोटयः ।  
-रुद्राणामपि मुर्धानः क्षत हुंकारशंसिनः ॥ 2.26 ॥  
+रुद्राणामपि मुर्धानः क्षतहुङ्कारशंसिनः ॥ 2.26 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -654,14 +670,16 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-लब्धप्रतिष्ठाः प्रथमं यूयं किं बलवत्तरैः ।  
-अपवादैरिवोत्मर्गाः कृतव्यावृत्तयः परैः ॥ 2.27 ॥  
+लब्ध-प्रतिष्ठाः प्रथमं  
+यूयं **किं** बलवत्तरैः ।  
+अपवादैर् इवोत्सर्गाः  
+**कृतव्यावृत्तयः** परैः ॥ 2.27 ॥  +++(5)+++
 </details>
 
 <details><summary>मूलम्</summary>
 
 लब्धप्रतिष्ठाः प्रथमं यूयं किं बलवत्तरैः ।  
-अपवादैरिवोत्मर्गाः कृतव्यावृत्तयः परैः ॥ 2.27 ॥  
+अपवादैरिवोत्सर्गाः कृतव्यावृत्तयः परैः ॥ 2.27 ॥  
 </details>
 
 <details><summary>अन्वयः</summary>
@@ -671,18 +689,20 @@ title = "०२"
 
 <details><summary>मल्लिनाथः</summary>
 
-लब्धेति ॥ प्रथमं पूर्वं लब्धप्रतिष्ठा लब्धस्थितयः । लब्धावकाशा इत्यन्यत्र । यूयं बलवत्तरैः पौरुषातिरेकात्प्रबलतरैः । निरवकाशैरित्यपरत्र । परैः शत्रुभिरत्सर्गाः सामान्यसास्त्राणि 'मा हिंस्यात्' इत्येवमादीनि । अपोद्यन्त एमिरित्यपवादैः 'गामालभेत' इत्यादिभिर्विशेषशास्त्रैरिव कि कृतव्यावृत्तयः कृतप्रतिष्ठाभङ्गाः । कृतविषयसंकोचरुपबाधा इत्यन्यत्र । 'विषयसंकोच एव बाधः' इत्याचार्याः । निषेधशास्त्रस्य वेदिकहिंसापरिहारेण लौरिकमात्रे व्यवस्थापनाद्विषयसंकोच इत्यलमतिगहनावगाहनेन ॥ 2.27 ॥
+लब्धेति ॥ प्रथमं पूर्वं लब्धप्रतिष्ठा लब्धस्थितयः । लब्धावकाशा इत्यन्यत्र । यूयं बलवत्तरैः पौरुषातिरेकात्प्रबलतरैः । निरवकाशैरित्यपरत्र । परैः शत्रुभिरत्सर्गाः सामान्यसास्त्राणि 'मा हिंस्यात्' इत्येवमादीनि । अपोद्यन्त एमिरित्यपवादैः 'गामालभेत' इत्यादिभिर्विशेषशास्त्रैरिव कि कृतव्यावृत्तयः कृतप्रतिष्ठाभङ्गाः । कृतविषयसंकोचरुपबाधा इत्यन्यत्र । 'विषयसंकोच एव बाधः' इत्याचार्याः । निषेधशास्त्रस्य वैदिकहिंसापरिहारेण लौरिकमात्रे व्यवस्थापनाद्विषयसंकोच इत्यलमतिगहनावगाहनेन ॥ 2.27 ॥
 </details>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तद्बूत वत्साः किमितः प्रार्थयध्वं समागताः ।  
-मयि सृष्टिर्हि लोकानां रक्षा युष्मास्ववस्थिता ॥2.28 ॥  
+तद्ब्रूत वत्साः **किम्** इतः  
+**प्रार्थयध्वे** समागताः ।  
+मयि सृष्टिर् हि लोकानां  
+रक्षा युष्मास्व् अवस्थिता ॥2.28 ॥+++(4)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-तद्बूत वत्साः किमितः प्रार्थयध्वं समागताः ।  
+तद्ब्रूत वत्साः किमितः प्रार्थयध्वे समागताः ।  
 मयि सृष्टिर्हि लोकानां रक्षा युष्मास्ववस्थिता ॥2.28 ॥  
 </details>
 
@@ -696,10 +716,13 @@ title = "०२"
 तदिति ॥ तत्तस्मात्कारणात् ।हे वत्साः पुत्रकाः । 'वत्सस्त्वर्भकपुत्राद्योर्वर्षे वत्सं तु वक्षसि' इति विश्वः । स्वयं पितामहत्वाद्वत्सा इत्यामन्त्रयते । संभूयागताः समागताः इतो मत्तः किं प्रार्थयध्वम् । किमिच्छतेत्यर्थः । ब्रूत । लोकरक्षणे यूयमेव कर्तार इत्याह- मयि लोकानां सृष्टी रक्षा युष्मास्ववस्थिता । अतस्तदर्थमपि नस्ति मदपेक्षेत्यर्थः ॥ 2.28 ॥
 </details>
 
+## प्रतिस्पन्दः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-ततो मन्दानिलोद्‌धूतकमलाकरशोभिना ।  
-गुरुं नेत्रसहस्त्रेण नोदयामास वासवः ॥ 2.29 ॥  
+ततो मन्दानिलोद्‌धूत-  
+कमलाकर-शोभिना ।  
+गुरुं नेत्र-सहस्त्रेण  
+नोदयामास वासवः ॥ 2.29 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
@@ -720,13 +743,15 @@ title = "०२"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स द्विनेत्रं हरेश्चक्षुः सहस्त्रनयनाधिकम् ।  
-वाचस्पतिरुवाचेदं प्राञ्जलिर्जलजासनम् ॥ 2.30 ॥  
+स द्विनेत्रो हरेश् चक्षुः  
+सहस्र-नयनाधिकम् ।  
+वाचस्पतिर् **उवाचेदं**  
+प्राञ्जलिर् जलजासनम् ॥ 2.30 ॥+++(5)+++  
 </details>
 
 <details><summary>मूलम्</summary>
 
-स द्विनेत्रं हरेश्चक्षुः सहस्त्रनयनाधिकम् ।  
+स द्विनेत्रो हरेश्चक्षुः सहस्रनयनाधिकम् ।  
 वाचस्पतिरुवाचेदं प्राञ्जलिर्जलजासनम् ॥ 2.30 ॥  
 </details>
 
